--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap'); 
+
 :root {
   /* 
         FIRST WE'LL DEFINE OUR SWATCHES, i.e. THE COMPLEMENTARY
@@ -19,7 +21,7 @@ body {
 
 #root {
   background-color: var(--swatch-primary);
-  font-family: serif;
+  font-family: Tangerine;
   position: absolute;
   width: 80%;
   left: 10%;
@@ -109,7 +111,7 @@ body {
 }
 
 .list-card, .selected-list-card, .unselected-list-card {
-  font-size: 18pt;
+  font-size: 28pt;
   margin: 10px;
   padding: 20px;
   border-radius: 25px;
@@ -156,7 +158,7 @@ body {
 .playlister-song, .playlister-song-dragged-to { 
   display:flex;
   align-items: center;
-  font-size: 24pt;
+  font-size: 32pt;
   height:20%;
 }
 
@@ -191,6 +193,7 @@ input {
 
 .modal-root {
   position: relative;
+  width: 1024px;
   max-width: 1200vw;
   max-height: 600vh;
   overflow: visible;
